src/objects/Harvest_Task__c.object
<CustomObject>
    <fields>
        <fullName>Billable_by_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Harvest Record created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_hourly_rate__c</fullName>
        <label>Default hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically add to new projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_at__c</fullName>
        <label>Harvest Record updated at</label>
        <type>DateTime</type>
    </fields>
    <label>Harvest Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_hourly_rate__c</columns>
        <columns>Billable_by_default__c</columns>
        <columns>Is_default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Harvest Tasks</label>
    </listViews>
    <nameField>
        <label>Harvest Tasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>